[project]
name = "telegram-mcp-server"
version = "1.0.0"
description = "High-performance MCP server for Telegram Bot API integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "python-telegram-bot>=21.0",
    "python-dotenv>=1.0.0",
    "aiohttp>=3.9.0",
]

[project.scripts]
telegram-mcp = "server:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
